--- a/LEDConfigUI/Views/MainWindow.xaml
+++ b/LEDConfigUI/Views/MainWindow.xaml
@@ -6,6 +6,28 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <ComboBox HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" Width="120"/>
+        <DataGrid Grid.Column="1" HorizontalAlignment="Left" Height="343" Margin="80,29,0,0"
+                  VerticalAlignment="Top" Width="144" SelectionUnit="Cell" SnapsToDevicePixels="True" ItemsSource="{Binding LEDs.Colors}"
+                  RowDetailsVisibilityMode="Visible" BorderThickness="0" CanUserResizeColumns="False" ClipToBounds="True" ColumnHeaderHeight="0" Grid.RowSpan="2" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" MinRowHeight="20">
+            <DataGrid.Columns>
+                <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Grid Margin="-1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{Binding Path=Brush}"></Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
     </Grid>
 </Window>
