--- a/LEDConfigUI/Views/MainWindow.xaml
+++ b/LEDConfigUI/Views/MainWindow.xaml
@@ -4,30 +4,52 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
-        <ComboBox HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" Width="120"/>
-        <DataGrid Grid.Column="1" HorizontalAlignment="Left" Height="343" Margin="80,29,0,0"
-                  VerticalAlignment="Top" Width="144" SelectionUnit="Cell" SnapsToDevicePixels="True" ItemsSource="{Binding LEDs.Colors}"
-                  RowDetailsVisibilityMode="Visible" BorderThickness="0" CanUserResizeColumns="False" ClipToBounds="True" ColumnHeaderHeight="0" Grid.RowSpan="2" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" MinRowHeight="20">
-            <DataGrid.Columns>
-                <DataGridTemplateColumn Width="*">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Grid Margin="-1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{Binding Path=Brush}"></Grid>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+        Title="Burning Man 2018" Height="450" Width="800">
 
-    </Grid>
+    <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <TabItem Header="Config">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <ComboBox Margin="20,20,20,0" VerticalAlignment="Top"/>
+
+            </Grid>
+        </TabItem>
+        <TabItem Header="Color">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <RadioButton x:Name="radioCustom" Content="Custom" HorizontalAlignment="Stretch" Margin="20,20,20,0"
+                             Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Width="117"/>
+                <DataGrid HorizontalAlignment="Stretch" Margin="20,50,20,20" SelectionUnit="Cell" SnapsToDevicePixels="True" ItemsSource="{Binding LEDs.Colors}"
+                          RowDetailsVisibilityMode="Visible" BorderThickness="0" CanUserResizeColumns="False" ClipToBounds="True" ColumnHeaderHeight="0"
+                          AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" MinRowHeight="20"
+                          Grid.Column="0" Grid.Row="0" VerticalAlignment="Stretch" Grid.RowSpan="2">
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Grid Margin="-1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{Binding Path=Brush}"></Grid>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <RadioButton x:Name="radioRainbow" Content="Rainbow" HorizontalAlignment="Left" Margin="20,20,492,0"
+                    Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" Width="117"/>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
